# LayerScape

./: README.md  package.json  pnpm-lock.yaml  vite.config.ts
src/: App.css  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: background.rs  floating_ball.rs  lib.rs  main.rs  mouse_events.rs  tray.rs  wallpaper.rs  window.rs  windows_api.rs
src/components/: FloatingBall.tsx  FloatingMenu.tsx  Layout.tsx  TrayWrapper.tsx  Wallpaper.tsx
src/core/: event.ts  focus.ts  init.ts  monitor.ts  mouse.ts  window.ts
src/core/floating/: FloatingBall.logic.ts  FloatingBall.ui.tsx  FloatingBallWindow.tsx  FloatingMenu.tsx  FloatingMenuWindow.tsx  index.ts  useFloatingBall.ts
src/core/tray/: TrayWindow.tsx  index.ts
src/core/wallpaper/: WallpaperWindow.tsx  index.ts  interactions.ts  monitor.ts
src/pages/: FloatingBall.logic.ts  FloatingBall.tsx  FloatingBall.ui.tsx  FloatingBallPage.tsx  FloatingBallWidget.tsx  Home.tsx  HomePage.tsx  ScreenCapture.tsx  StatusBarWidget.tsx  Tray.tsx  TrayPage.tsx  Wallpaper.tsx  WallpaperPage.tsx  WallpaperWindow.tsx
src/utils/: focus.ts  init.ts  mouse.ts  tray.ts  window.ts
