[package]
name = "LayerScape"
version = "0.1.0"
description = "A desktop application for exploring desktop wallpaper layers, floating widgets, and status bar interactions."
authors = ["Del Wang"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "layerscape_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [
    "macos-private-api",
    "tray-icon",
    "image-png",
    "image-ico",
] }
tauri-plugin-opener = "2"
tauri-plugin-positioner = { version = "2", features = ["tray-icon"] }
tauri-plugin-dialog = "2"
tauri-plugin-process = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
mouse_position = "0.1.4"
objc2 = "0.6.3"
objc2-app-kit = { version = "0.3.2", features = [
    "NSWindow",
    "NSResponder",
    "NSView",
    "NSScreen",
    "NSGraphics",  # for NSWindowStyleMask
] }
rdev = { git = "https://github.com/Narsil/rdev", rev = "c14f2dc5c8100a96c5d7e3013de59d6aa0b9eae2" }
